resources/tp3-gateway-pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: gateway

spec:
  containers:
    - name: gateway
      image: centos:7
      command: ["sleep", "infinity"]
