resources/tp4-whoami-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: whoami

spec:
  selector:
    app: whoami
  ports:
    - port: 8080
      targetPort: 80
